--- a/public/stylesheets/sass/hovercard.scss
+++ b/public/stylesheets/sass/hovercard.scss
@@ -28,9 +28,12 @@
 
 
   h4 {
-    margin-bottom: 0px;
+    margin: {
+      bottom: 0px;
+      left: 80px;
+    }
     padding-bottom: 0px;
-    overflow:hidden;
+    white-space: nowrap;
   }
 
   a {
@@ -41,8 +44,13 @@
   p {
     color: #999999;
     padding-top: 0px;
-    margin-top: 0px;
-    margin-bottom: 10px;
+    margin: {
+      top: 0px;
+      left: 80px;
+      bottom: 10px;
+    }
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   .hovercard_footer {
